# examples

./: LICENSE  README.md  instrumentation.js
astro-cloudflare-pages/: package-lock.json  package.json
baselime-cloudflare-pages/: .gitignore  README.md  index.html  package-lock.json  package.json  readme.md
baselime-cloudflare-pages/functions/: index.js
cloudflare-workers/: .prettierrc  README.md  package-lock.json  package.json  wrangler.toml
docker-logs/: Dockerfile  README.md  docker-compose.yml  main.go
golang-otel-lambda/: README.md  go.mod  go.sum  main.go
kinesis-autoscaling/: README.md  package.json
kubernetes-logs/: README.md  config.yaml  daemon.yaml
nextjs/: README.md  instrumentation.ts  next.config.js  package-lock.json  package.json
nodejs-api/: README.md  get.js  package-lock.json  package.json  post.js  serverless.yml  tracing.js
open-next-lambda/: README.md  package-lock.json  package.json  sst.config.ts
planetscale/: app.js  instrumentation.js  package-lock.json  package.json
python-lambda/: README.md  package-lock.json  package.json  pyproject.toml  sst.config.ts
python-lambda/src/: app.py  notify.py  requirements.txt  subscribe.py
python-lambda/stacks/: MyStack.ts
svelte-cloudflare-pages/: .gitignore  package-lock.json  package.json  svelte.config.js  vite.config.ts
svelte-opentelemetry-vercel/: package-lock.json  package.json
t3-app/: next.config.mjs  package-lock.json  package.json  t3-app-0.1.0.tgz  tsconfig.json
vector/: vector.yaml
worker-durable-objects/: .gitignore  index.js  package.json  wrangler.toml
(+29 files in other folders)
