[tool.poetry]
name = "python-lambda"
version = "0.1.0"
description = ""
authors = ["Ankcorn <thomasankcorn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mangum = "^0.17.0"
boto3 = "^1.29.6"
opentelemetry-api = "^1.21.0"
requests = "^2.31.0"
aws-lambda-powertools = {extras = ["aws-sdk"], version = "^2.28.0"}
aws-lambda-logging = "^0.1.1"
baselime-pynamodb = "^6.0a0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
